# textshot

./: ProjectHome.md  README
docs/: slog-jumpshot.tex
src/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  sslog_trace_impl.c  trace_impl.h.in
trunk/src/: Makefile.am  configure.ac  sslog.in  trace_impl.h.in
trunk/src/examples/small/: ws.sslog
